# edge-vision

./: .env.example  .gitignore  BUILD_PLAN.md  CHANGELOG.md  CITATION.cff  DEPLOYMENT.md  Makefile  NEXT_STEPS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: base.yaml
dashboard/: live_demo.py  pareto_plot.py
docs/: API.md  DEVELOPMENT.md  EVALUATION_REPORT.md  USAGE.md  architecture.md  research_questions.md
docs/results/: phase1_baseline.md  phase2_compile.md  phase3_cpu_int8.json  phase3_cpu_int8.md  phase3_quantization.json  phase3_quantization.md  phase4_cpu_pruning.json  phase4_cpu_pruning.md  phase4_distillation.json  phase4_distillation.md  phase5_pareto.json  phase5_pareto.md  phase5_power.json  phase5_power.md
hf_space/: README.md  app.py  requirements.txt
scripts/: bench_cpu_int8.py  bench_cpu_pruning.py  jetson_bench.py  run_baseline_smoke.py  run_compile_smoke.py  run_distill_full.py  run_distill_smoke.py  run_latency_sweep.py  run_power_sweep.py  run_quant_smoke.py
src/edgevision/: __init__.py  schemas.py
src/edgevision/api/: __init__.py
src/edgevision/cli/: __init__.py  smoke.py
src/edgevision/compile/: __init__.py  onnx_export.py  onnxrt_cpu.py  trt_build.py  trt_runtime.py
src/edgevision/dashboard/: __init__.py
src/edgevision/data/: __init__.py  coco_loader.py  preprocessor.py
src/edgevision/distillation/: __init__.py  loss.py  student_train.py
src/edgevision/evaluation/: __init__.py  coco_eval.py  pareto_aggregator.py  quant_eval.py
src/edgevision/inference/: __init__.py  latency_harness.py
src/edgevision/models/: __init__.py  rtdetr_wrapper.py  tiny_model.py
src/edgevision/profiling/: __init__.py  cpu_profile.py  nvml_power.py  thermal_runner.py
src/edgevision/pruning/: __init__.py  structured_prune.py
src/edgevision/quantization/: __init__.py  calib_dataset.py  onnx_qdq.py  trt_int8.py
tests/: conftest.py  test_baseline_smoke.py  test_calib_dataset.py  test_coco_eval.py  test_coco_loader.py  test_compile_smoke.py  test_cpu_pruning_bench.py  test_distill_smoke.py  test_distillation.py  test_hf_space_app.py  test_imports.py  test_latency_harness.py  test_onnx_export.py  test_onnx_qdq.py  test_onnxrt_cpu.py  test_pareto_aggregator.py  test_power_sweep.py  test_preprocessor.py  test_profiling.py  test_quant_eval.py  test_quant_smoke.py  test_rtdetr_wrapper.py  test_schemas.py  test_trt_build.py  test_trt_int8.py
