[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edgevision"
version = "0.1.0"
description = "Real-time detection + segmentation on real hardware — RT-DETR + MobileSAM with ONNX/TensorRT/INT8 + power profiling (Project Alpha-1)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # Core ML
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "transformers>=4.45.0",
    "accelerate>=0.34.0",

    # Detection / vision
    "supervision>=0.24.0",
    "opencv-python>=4.10.0",
    "Pillow>=10.4.0",
    "pycocotools>=2.0.7",

    # ONNX (CPU path needs no GPU deps)
    "onnx>=1.17.0",
    "onnxruntime>=1.20.0",

    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.31.0",
    "python-multipart>=0.0.10",

    # Validation
    "pydantic>=2.9.0",

    # Profiling (CPU side)
    "psutil>=6.0.0",

    # Tracking / experiment hygiene
    "mlflow>=2.16.0",
    "wandb>=0.18.0",

    # Utilities
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.1",
    "loguru>=0.7.2",
    "hydra-core>=1.3.2",
    "pyyaml>=6.0.2",
    "numpy>=1.26.0,<2.0.0",
    "pandas>=2.2.0",
    "matplotlib>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "ipykernel>=6.29.0",
    "jupyterlab>=4.2.0",
]

# GPU + TensorRT extras — install when you have an NVIDIA GPU and a matching driver
gpu = [
    # GPU profiling (NVML)
    "pynvml>=11.5.0",
    # ONNX Runtime GPU provider
    "onnxruntime-gpu>=1.20.0",
]

# TensorRT — Python wheels are NVIDIA-published, may need a specific torch / cuda combo
trt = [
    "tensorrt>=10.5.0",
    # pycuda is required for some TRT workflows; keep it optional in case the driver is mismatched
    "pycuda>=2024.1",
]

# Streamlit dashboard + Plotly
ui = [
    "streamlit>=1.39.0",
    "plotly>=5.24.0",
]

# CoreML export (Phase 7 stub)
coreml = [
    "coremltools>=8.0",
]

[project.scripts]
edgevision-smoke = "edgevision.cli.smoke:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require a CUDA GPU",
    "trt: marks tests that require TensorRT",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = false
warn_return_any = false
warn_unused_ignores = true
